--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "errorhandler": "1.0.x",
     "body-parser": "1.0.x",
     "method-override": "1.0.x",
-    "mysql": "2.2.x"
+    "mysql": "2.2.x",
+    "nodemailer": "^0.6.3"
   }
 }
